--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,18 @@
+.container {
+  width: 1920px;
+  height: 1080px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f0f0f0;
+}
+
 app-header {
-	position: absolute;
+  width: 100%;
+  height: 100px;
+}
+
+router-outlet {
+  flex-grow: 1;
 }
