added title and start button with translation support

--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,8 +1,10 @@
 <div class="start-screen">
 	<mat-card class="start-card">		
-			<mat-card-title class="start-title">Welcome to the Quiz</mat-card-title>		
-		<mat-card-content>
-			<button mat-stroked-button color="primary" (click)="startQuiz()">Start Quiz</button>
+			<mat-card-title class="start-title">{{ 'START-SCREEN.TITLE' | translate }}</mat-card-title>		
+		<mat-card-content class="start-content">
+			<button mat-button color="primary" (click)="startQuiz()">{{'START-SCREEN.START'|translate}}</button>
 		</mat-card-content>
 	</mat-card>
 </div>
+
+
